# Engine

./: .gitignore  .gitmodules  README.md
Engine/: CMakeLists.txt  CMakePresets.json  vcpkg.json
Engine/Assets/Config/: ProjectSettings.ini
Engine/Source/Private/: Engine.cpp
Engine/Source/Private/Assets/: AssetsGlobals.cpp  AssetsManager.cpp
Engine/Source/Private/Assets/Assets/: AssetBase.cpp  MapAsset.cpp
Engine/Source/Private/Assets/IniReader/: IniObject.cpp
Engine/Source/Private/Assets/TypesForAssets/: Texture.cpp
Engine/Source/Private/Core/: Engine.cpp  EngineMain.cpp  EngineRender.cpp
Engine/Source/Private/Core/ECS/: Component.cpp  ComponentAnimation.cpp  ComponentManagerInterface.cpp  Entity.cpp
Engine/Source/Private/Core/Engine/: EngineRenderingManager.cpp
Engine/Source/Private/Core/Input/: EventHandler.cpp
Engine/Source/Private/Core/Threads/: RenderThread.cpp  Thread.cpp  ThreadsManager.cpp
Engine/Source/Private/Core/Timer/: Timer.cpp
Engine/Source/Private/Misc/: EncryptionManager.cpp  EncryptionUtil.cpp  FileSystem.cpp  Math.cpp  PasswordEncryptionArgon.cpp  PasswordEncryptionBase.cpp  StringHelpers.cpp  Util.cpp  VectorMath.cpp
Engine/Source/Private/Network/: NetworkClassBase.cpp  NetworkManager.cpp
Engine/Source/Private/Network/TCP/: NetworkTCPClient.cpp  NetworkTCPServer.cpp
Engine/Source/Private/Renderer/: Renderer.cpp  Window.cpp
Engine/Source/Private/Renderer/Map/: EngineMap.cpp  Map.cpp  MapManager.cpp
Engine/Source/Private/Renderer/Widgets/: UIMenu.cpp  Widget.cpp  WidgetDebugger.cpp  WidgetsPositionInterface.cpp
Engine/Source/Private/Types/: Vector2D.cpp
Engine/Source/Private/Types/Mutex/: Mutex.cpp
Engine/Source/Private/Types/SmartPointer/: SmartSharedPointer.cpp
Engine/Source/Public/Assets/: AssetsGlobals.h  AssetsManager.h  AssetsManagerHelpers.h
Engine/Source/Public/Assets/Assets/: AssetBase.h  FontAsset.h  IniAsset.h  MapAsset.h
Engine/Source/Public/Assets/Collection/: AssetCollectionItem.h  BaseAssetsCollection.h
Engine/Source/Public/Assets/IniReader/: IniObject.h
Engine/Source/Public/Assets/TypesForAssets/: Font.h
Engine/Source/Public/Containers/: Array.h  ContainerBase.h  Deque.h  Map.h  QueueSafe.h  UnorderedMap.h
Engine/Source/Public/Core/: Engine.h  EngineMain.h  EngineRender.h  Object.h
Engine/Source/Public/Core/ECS/: ComponentAnimation.h  ComponentManagerInterface.h  Entity.h  EntityManager.h  TeamEntity.h
Engine/Source/Public/Core/Engine/: EngineRenderingManager.h  EngineTickingManager.h
Engine/Source/Public/Core/Includes/: EngineMacros.h  ForwardEngineBase.h  FullEngineBase.h  FullThirdParty.h  GlobalProperties.h
Engine/Source/Public/Core/Input/: EventHandler.h  EventHandlerShared.h  WindowInputManager.h
Engine/Source/Public/Core/Interfaces/: TransformInterface2D.h
Engine/Source/Public/Core/Memory/: AutoDeletePointer.h  AutoUIMenu.h  Class.h
Engine/Source/Public/Core/Test/: TestBase.h  TestManager.h
Engine/Source/Public/Core/Threads/: RenderThread.h  Thread.h  ThreadsManager.h
Engine/Source/Public/Misc/: EncryptionManager.h  EncryptionUtil.h  Filesystem.h  Math.h  PasswordEncryptionArgon.h  PasswordEncryptionBase.h  StringHelpers.h  Util.h  VectorMath.h
Engine/Source/Public/Network/: NetworkClassBase.h
Engine/Source/Public/Network/TCP/: NetworkTCPClient.h  NetworkTCPServer.h
Engine/Source/Public/Renderer/: Renderer.h  Window.h  WindowAdvanced.h
Engine/Source/Public/Renderer/Map/: EngineMap.h  Map.h  MapEditor.h  MapManager.h
Engine/Source/Public/Renderer/Widgets/: UIMenu.h  Widget.h  WidgetEnums.h  WidgetInteraction.h  WidgetManager.h  WidgetStructs.h  WidgetsManagementInterface.h  WidgetsPositionInterface.h
Engine/Source/Public/Types/: ColorRGBA.h  Vector2D.h
Engine/Source/Public/Types/Delegate/: Delegate.h  DelegateBase.h  DelegateSafe.h
Engine/Source/Public/Types/Functors/: FunctorBase.h  FunctorLambda.h  FunctorObject.h  FunctorStatic.h
Engine/Sources/Private/Assets/: AssetsGlobals.cpp  AssetsManager.cpp  Parser.cpp
Engine/Sources/Private/Assets/Assets/: AssetBase.cpp  FontAsset.cpp  IniAsset.cpp  MapAsset.cpp  TextureAsset.cpp
Engine/Sources/Private/Assets/Collection/: AssetCollectionItem.cpp  BaseAssetsCollection.cpp  EngineAssetsCollection.cpp
Engine/Sources/Private/Assets/IniReader/: IniObject.cpp
Engine/Sources/Private/Assets/TypesForAssets/: Font.cpp  Texture.cpp
Engine/Sources/Private/Containers/: ContainerBase.cpp
Engine/Sources/Private/Core/: CoreEngine.cpp  CoreMinimal.cpp  Engine.cpp  EngineMain.cpp  EngineRender.cpp  Object.cpp
Engine/Sources/Private/Core/ECS/: BaseComponent.cpp  Component.cpp  ComponentAnimation.cpp  ComponentManagerInterface.cpp  EntityManager.cpp  TeamEntity.cpp
Engine/Sources/Private/Core/Engine/: EngineSubsystemInterface.cpp
Engine/Sources/Private/Core/Input/: EventHandlerMouse.cpp  WindowInputManager.cpp
Engine/Sources/Private/Core/Interfaces/: TransformInterface2D.cpp
Engine/Sources/Private/Core/Memory/: AutoDeletePointer.cpp  AutoUserUI.cpp  Class.cpp
Engine/Sources/Private/Core/Test/: TestBase.cpp  TestLongRun.cpp  (+2 more)
Engine/Sources/Private/Misc/: EncryptionManager.cpp  EncryptionUtil.cpp  FileSystem.cpp  Math.cpp  PasswordEncryptionArgon.cpp  PasswordEncryptionBase.cpp  Serializer.cpp  StringHelpers.cpp  Util.cpp  VectorMath.cpp
Engine/Sources/Private/Renderer/: Renderer.cpp  Window.cpp  WindowAdvanced.cpp
Engine/Sources/Private/Types/: ColorRGBA.cpp
Engine/Sources/Public/Assets/: AssetsManager.h  AssetsManagerHelpers.h
Engine/Sources/Public/Containers/: Array.h  ContainerBase.h  Deque.h  Map.h  QueueSafe.h  UnorderedMap.h
Engine/Sources/Public/Core/: CoreEngine.h  CoreMinimal.h  Engine.h  EngineMain.h  EngineRender.h  Object.h
Engine/Sources/Public/Misc/: EncryptionManager.h  EncryptionUtil.h  FileSystem.h  Math.h  PasswordEncryptionArgon.h  PasswordEncryptionBase.h  Serializer.h  StringHelpers.h  Util.h  VectorMath.h
Engine/Sources/Public/Renderer/: Renderer.h  Window.h  WindowAdvanced.h
Engine/Sources/Public/Types/: ColorRGBA.h  Vector2D.h
Engine/SourcesTest/: MainTestFile.cpp
(+264 files in other folders)
